--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tour of DOM</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
-    
+
+    <header>
+        <h1>Welcome to my DOM</h1>
+    </header>
+
+    <main>
+        <h1>My Awesome DOM</h1>
+        <ul>
+            <li>Jalali Set</li>
+            <li>Safayet</li>
+            <li>Bonobash</li>
+            <li>dom de re baba</li>
+        </ul>
+        <ul>
+            <li>KAmal Set</li>
+            <li>Kuyet</li>
+            <li>Valobasha</li>
+            <li>dom de re amma</li>
+        </ul>
+
+        <h1>footer er age header</h1>
+    </main>
+
+    <script src="./js/dom.js"></script>
+
+
+
+    <script>
+        
+    </script>
+
+
 </body>
+
 </html>
