added a css class in classlist & also delete it

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </section>
 
 
-        <section class="place-container">
+        <section id="place-container" class="large-text">
             <h1 id="places-title">Places I like to visit</h1>
             <ul>
                 <li class="important-places">Sundarban</li>
@@ -69,6 +69,7 @@
 
     </main>
     <script src="./js/dom.js"></script>
+    <script src="./js/styleInJs.js"></script>
 
 
 </body>
