--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             reiciendis dolore quaerat consequuntur ea ab.</p>
     </header>
 
-    <main>
+    <main id="main-container">
 
 
         <section id="my-dom">
@@ -48,7 +48,7 @@
         <section class="fruit-container">
             <!-- wfhergofewrgj -->
             <h1 id="fruits-title" class="fruit-class random kochi">Fruits I like</h1>
-            <ul>
+            <ul id="places-list">
                 <li>Mango</li>
                 <li>Banana</li>
                 <li>cucumber</li>
@@ -69,6 +69,7 @@
 
     </main>
     <script src="./js/dom.js"></script>
+    <script src="./js/append.js"></script>
     <script src="./js/styleInJs.js"></script>
 
 
